First PostService implementation, with metadata retrieval + Clean project + Loading logo

--- a/FRifugioBlog/Shared/NavMenu.razor
+++ b/FRifugioBlog/Shared/NavMenu.razor
@@ -1,11 +1,12 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">FRifugioBlog</a>
+    <a class="navbar-brand" href="">Francesco Rifugio - Blog</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+    <img class="rounded-circle mx-auto my-5" id="profile-photo" src="assets/profile.jpg" width="200"/>
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -13,13 +14,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="about">
+                <span class="oi oi-person" aria-hidden="true"></span> About
             </NavLink>
         </li>
     </ul>
