--- a/FRifugioBlog/wwwroot/css/app.css
+++ b/FRifugioBlog/wwwroot/css/app.css
@@ -1,5 +1,30 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+#loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+#loading-logo {
+    animation: .8s infinite loadingPulse;
+}
+
+@keyframes loadingPulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
