--- a/FRifugioBlog/Shared/PostCard.razor
+++ b/FRifugioBlog/Shared/PostCard.razor
@@ -3,7 +3,10 @@
 @inject IPostService PostService
 
 <div class="card">
-    <img class="card-img-top" src="@Post.HeadImagePath" alt="Post image cap">
+    @if (!string.IsNullOrEmpty(Post.HeadImagePath))
+    {
+        <img class="card-img-top" src="@Post.HeadImagePath" alt="Post image cap">
+    }
     <div class="card-body">
         <h5 class="card-title">@Post.Title</h5>
         <p class="card-text">@Post.Summary</p>
@@ -12,17 +15,18 @@
     <div class="card-footer">
         <small class="text-muted">@Post.PublishDate.ToShortDateString()</small>
     </div>
+    <a class="stretched-link" href="/post/@Filename"/>
 </div>
 
 @code {
 
     [Parameter]
-    public string Path { get; set; }
+    public string Filename { get; set; }
 
     public Post Post { get; set; } = new Post();
 
     protected override async Task OnParametersSetAsync()
     {
-        Post = await PostService.GetPostMetadataFromPathAsync(Path);
+        Post = await PostService.GetPostMetadataAsync(Filename);
     }
 }
