Fix PostCard link to PostView

--- a/FRifugioBlog/Shared/PostCard.razor
+++ b/FRifugioBlog/Shared/PostCard.razor
@@ -15,7 +15,7 @@
     <div class="card-footer">
         <small class="text-muted">@Post.PublishDate.ToShortDateString()</small>
     </div>
-    <a class="stretched-link" href="/post/@Filename"/>
+    <a class="stretched-link" href="post/@Filename"/>
 </div>
 
 @code {
