--- a/FRifugioBlog/Pages/PostView.razor
+++ b/FRifugioBlog/Pages/PostView.razor
@@ -1,10 +1,17 @@
 ﻿@page "/post/{filename}"
 @using Models
 @using Services
-@using Markdig
 @inject IPostService PostService
 
-@HtmlContent
+<style>
+    .container {
+        background-color: white;
+    }
+</style>
+
+<div class="container">
+    @HtmlContent
+</div>
 
 @code {
     [Parameter]
