--- a/FRifugioBlog/wwwroot/css/app.css
+++ b/FRifugioBlog/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css");
 
 #loading-container {
     display: flex;
@@ -25,18 +25,12 @@
     }
 }
 
+body {
+    background-color: #EEEEF2;
+}
+
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-a, .btn-link {
-    color: #0366d6;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .content {
