--- a/FRifugioBlog/Pages/PostView.razor
+++ b/FRifugioBlog/Pages/PostView.razor
@@ -4,12 +4,12 @@
 @inject IPostService PostService
 
 <style>
-    .container {
+    #post-content {
         background-color: white;
     }
 </style>
 
-<div class="container">
+<div class="container" id="post-content">
     @HtmlContent
 </div>
 
