--- a/FRifugioBlog/Shared/NavMenu.razor.css
+++ b/FRifugioBlog/Shared/NavMenu.razor.css
@@ -1,11 +1,17 @@
+:root {
+    --background-color: #007ACC;
+    --accent-color: #D5D5D5;
+    --accent-color-highlight: #C8C8C8;
+}
+
 .navbar-custom {
-    background-color: #007ACC;
+    background-color: var(--background-color);
     font-family: 'Russo One', cursive;
-    color: #D5D5D5;
+    color: var(--accent-color);
 }
 
     .navbar-custom a {
-        color: #D5D5D5;
+        color: var(--accent-color);
     }
 
     .navbar-custom .nav-item {
@@ -13,7 +19,7 @@
     }
 
         .navbar-custom .nav-item-text ::deep a {
-            color: #D5D5D5;
+            color: var(--accent-color);
             position: relative;
         }
 
@@ -25,7 +31,7 @@
             bottom: 18px;
             margin-left: 8px;
             left: 0;
-            background-color: #D5D5D5;
+            background-color: var(--accent-color);
             visibility: hidden;
             transform: scaleX(0);
             transition: all 0.3s ease-in-out 0s;
@@ -50,7 +56,7 @@
 }
 
     .nav-link-icon :hover {
-        color: #C8C8C8;
+        color: var(--accent-color-highlight);
     }
 
 .main-logo {
@@ -74,7 +80,7 @@
 
     .navbar-toggler {
         margin-top: 5px;
-        border-color: #D5D5D5;
+        border-color: var(--accent-color);
     }
 
         .navbar-toggler .navbar-toggler-icon {
