--- a/FRifugioBlog/Pages/About.razor
+++ b/FRifugioBlog/Pages/About.razor
@@ -25,12 +25,17 @@
         <div class="col-sm-9">
             <h1>Francesco Rifugio</h1>
             <p>
-                Sviluppatore auto-didatta, nato con Windows Phone, in cui ci ha lasciato un pezzo di cuore. Passato poi ad uno sviluppo desktop e web, sempre legato a tutto ciò che è tecnologia Microsoft.
+                Nato con la passione per l'informatica, ho scoperto il mondo e il fascino della programmazione grazie al fu Windows Phone, a cui ho lasciato un pezzo di cuore.<br />
+                Su questa piattaforma ho ricevuto infatti le prime soddisfazioni: in primis con le applicazioni sviluppate, arrivate in posizioni importanti nello Store italiano, ma soprattuto con la partecipazione al programma Microsoft Student Partner che mi ha permesso di avvicinarmi ad un'altra mia grande passione: il public speaking. Ho iniziato infatti ad organizzare e parlare ad eventi in Università, dove condividevo le conoscenze acquisite da auto-didatta nello sviluppo mobile.
                 <br /><br />
-                Amante della tecnologia in generale, sempre alla ricerca dell'ultimo ritrovato tecnologico, e con una dipendenza all'adrenalina che solo il parlare in pubblico restituisce.
+                In quello stesso periodo è arrivata la mia prima esperienza lavorativa in Microsoft Italia dove ho coperto diversi ruoli. Prima, come Technical Evangelist, ho avuto la possibilità di parlare ad importati eventi tecnici italiani. Poi come Multimedia Manager dove ho potuto riprendere tutta la parte di sviluppo web. Infine come Program Manager, dove seguivo da vicino progetti innovativi dei partner.
                 <br /><br />
-                Se non è davanti al PC, potete trovarlo dietro i fornelli in cucina... o davanti a qualche console!
-            </p>
+                Dopo Microsoft ho deciso di focalizzarmi ulteriormente nello sviluppo software in Italia e mi sono spostato in Brain-Sys. Qui ho seguito progetti sia web che desktop, tenendomi sempre aggiornato sulle ultime tecnologie del settore. Inoltre ho continuato a coltivare la mia passione del public speaking, questa volta erogando corsi tecnici propedeutici all'ottenimento di certificazioni Microsoft.
+                <br /><br />
+                L'informatica però non è la mia unica passione!<br />
+                Se non sono davanti al PC infatti mi potrete trovare in una cucina, a cucinare qualcosa di prelibato.<br />
+                Altrimenti, se fa troppo caldo per stare ai fornelli, nulla mi toglie dalla mia Xbox Series X (che ovviamente non è l'unica console in casa). E non mi chiedete a cosa gioco! Perchè faccio prima a dirvi a cosa *non* gioco, ma se proprio dovessi scegliere, nulla batte Assassin's Creed.
+                </p>
         </div>
     </div>
     <hr />
