--- a/FRifugioBlog/Pages/PostView.razor
+++ b/FRifugioBlog/Pages/PostView.razor
@@ -10,6 +10,10 @@
         padding: 1rem;
     }
 
+    #post-content h1 {
+        margin-bottom: 2rem;
+    }
+
     #head-image {
         object-fit: cover;
         height: 15rem;
@@ -23,6 +27,10 @@
 
 <div class="container rounded" id="post-content">
     @HtmlContent
+
+    <blockquote class="blockquote text-right mt-5">
+        <footer class="blockquote-footer">@Post.Author, <cite title="Source Title">@Post.PublishDate.ToShortDateString()</cite></footer>
+    </blockquote>
 </div>
 
 @code {
