--- a/FRifugioBlog/Shared/NavMenu.razor
+++ b/FRifugioBlog/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Main navigation -->
-    <div class="navbar-collapse collapse w-100 mx-auto order-0 all-collapse">
+    <div class="navbar-collapse collapse w-100 mx-auto order-0 all-collapse justify-content-around">
         <ul class="navbar-nav align-items-center">
             <li class="nav-item nav-item-text nav-item-text-blog">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Blog</NavLink>
