New post + About page updated

--- a/FRifugioBlog/Pages/About.razor
+++ b/FRifugioBlog/Pages/About.razor
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-3">
-        <div class="col-4 mx-auto">
+        <div class="col-3 mx-auto">
             <figure class="figure">
                 <a href="https://www.credly.com/badges/dd93a511-40b2-4662-a5c7-57614108d8d8/public_url" target="_blank">
                     <img src="assets/about/microsoft-certified-azure-ai-fundamentals.png" class="figure-img img-fluid" alt="Microsoft Certified: Azure AI Fundamentals - Badge">
@@ -53,12 +53,36 @@
                 <figcaption class="figure-caption text-center">Microsoft Certified: Azure AI Fundamentals</figcaption>
             </figure>
         </div>
-        <div class="col-4 mx-auto">
+        <div class="col-3 mx-auto">
             <figure class="figure">
                 <a href="https://www.credly.com/badges/1a7c94ad-e69c-4fd8-abaa-a01a0f3c4fef/public_url" target="_blank">
                     <img src="assets/about/microsoft-certified-azure-developer-associate.1.png" class="figure-img img-fluid" alt="Microsoft Certified: Azure Developer Associate - Badge">
                 </a>
                 <figcaption class="figure-caption text-center">Microsoft Certified: Azure Developer Associate</figcaption>
+            </figure>
+        </div>
+        <div class="col-3 mx-auto">
+            <figure class="figure">
+                <a href="https://www.credly.com/badges/08bd90b1-004f-4ee0-a0a5-ccd76b25c781/public_url" target="_blank">
+                    <img src="assets/about/microsoft-certified-azure-ai-engineer-associate.png" class="figure-img img-fluid" alt="Microsoft Certified: Azure AI Engineer Associate - Badge">
+                </a>
+                <figcaption class="figure-caption text-center">Microsoft Certified: Azure AI Engineer Associate</figcaption>
+            </figure>
+        </div>
+        <div class="col-3 mx-auto">
+            <figure class="figure">
+                <a href="https://www.credly.com/badges/f28b8390-5433-4a21-98e8-04dfbdef02ea/public_url" target="_blank">
+                    <img src="assets/about/microsoft-certified-power-platform-developer-associate.png" class="figure-img img-fluid" alt="Microsoft Certified: Power Platform Developer Associate - Badge">
+                </a>
+                <figcaption class="figure-caption text-center">Microsoft Certified: Power Platform Developer Associate</figcaption>
+            </figure>
+        </div>
+        <div class="col-3 mx-auto">
+            <figure class="figure">
+                <a href="https://www.credly.com/badges/9a6d95f1-ca99-4cb5-ad86-41c231aff1d2/public_url" target="_blank">
+                    <img src="assets/about/aws-certified-developer-associate.png" class="figure-img img-fluid" alt="AWS Certified Developer – Associate - Badge">
+                </a>
+                <figcaption class="figure-caption text-center">AWS Certified Developer – Associate</figcaption>
             </figure>
         </div>
     </div>
