Upgrade to latest Bootstrap 4 + Update Twitter icon

--- a/FRifugioBlog/Pages/About.razor
+++ b/FRifugioBlog/Pages/About.razor
@@ -94,7 +94,7 @@
     </div>
     <div class="row">
         <a class="mx-auto contact-icon" href="mailto://f.rifugio@outlook.com" target="_blank"><i class="bi bi-envelope-fill"></i></a>
-        <a class="mx-auto contact-icon" href="https://twitter.com/Dragonriffi92" target="_blank"><i class="bi bi-twitter"></i></a>
+        <a class="mx-auto contact-icon" href="https://twitter.com/Dragonriffi92" target="_blank"><i class="bi bi-twitter-x"></i></a>
         <a class="mx-auto contact-icon" href="https://www.linkedin.com/in/francesco-rifugio/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a class="mx-auto contact-icon" href="https://github.com/frifugio/" target="_blank"><i class="bi bi-github"></i></a>
     </div>
