--- a/FRifugioBlog/Shared/NavMenu.razor
+++ b/FRifugioBlog/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 all-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link nav-link-icon mx-1" href="https://twitter.com/Dragonriffi92" target="_blank"><i class="bi bi-twitter"></i></a>
+                <a class="nav-link nav-link-icon mx-1" href="https://twitter.com/Dragonriffi92" target="_blank"><i class="bi bi-twitter-x"></i></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link nav-link-icon mx-1" href="https://www.linkedin.com/in/francesco-rifugio/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -61,7 +61,7 @@
     <!-- Social Links -->
     <div class="navbar-collapse collapse all-collapse">
         <div class="container d-flex justify-content-center w-75 mt-4">
-            <a class="nav-link-icon mx-auto" href="https://twitter.com/Dragonriffi92" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a class="nav-link-icon mx-auto" href="https://twitter.com/Dragonriffi92" target="_blank"><i class="bi bi-twitter-x"></i></a>
             <a class="nav-link-icon mx-auto" href="https://www.linkedin.com/in/francesco-rifugio/" target="_blank"><i class="bi bi-linkedin"></i></a>
             <a class="nav-link-icon mx-auto" href="https://github.com/frifugio/" target="_blank"><i class="bi bi-github"></i></a>
         </div>
