Update About page and manifest

--- a/FRifugioBlog/Pages/About.razor
+++ b/FRifugioBlog/Pages/About.razor
@@ -30,12 +30,17 @@
                 <br /><br />
                 In quello stesso periodo è arrivata la mia prima esperienza lavorativa in Microsoft Italia dove ho coperto diversi ruoli. Prima, come Technical Evangelist, ho avuto la possibilità di parlare ad importati eventi tecnici italiani. Poi come Multimedia Manager dove ho potuto riprendere tutta la parte di sviluppo web. Infine come Program Manager, dove seguivo da vicino progetti innovativi dei partner.
                 <br /><br />
-                Dopo Microsoft ho deciso di focalizzarmi ulteriormente nello sviluppo software in Italia e mi sono spostato in Brain-Sys. Qui ho seguito progetti sia web che desktop, tenendomi sempre aggiornato sulle ultime tecnologie del settore. Inoltre ho continuato a coltivare la mia passione del public speaking, questa volta erogando corsi tecnici propedeutici all'ottenimento di certificazioni Microsoft.
+                Dopo Microsoft ho deciso di focalizzarmi ulteriormente nello sviluppo software in Italia, e cosí mi sono lanciato nel mondo della consulenza, prima in Brain-Sys, e poi in Avanade nella divisione di Intelligent Automation.<br />
+                In questo mondo ho avuto la possibilitá di seguire sia progetti desktop che soprattutto web, per settori che spaziavano dalle telecomunicazioni alla sanitá, dovendo quindi avere sempre particolare attenzione a scalabilitá e sicurezza, tenendomi al tempo stesso sempre aggiornato sulle ultime tecnologie del settore. <br />
+                Inoltre ho continuato a coltivare la mia passione del public speaking, sia erogando corsi tecnici propedeutici all'ottenimento di certificazioni Microsoft, che partecipando a diversi eventi community!
+                <br /><br />
+                Quasi all'improvviso poi si é aperta un'opportunitá a cui era difficile rinunciare, poter entrare nel mondo dello sviluppo di videogames, e al tempo stesso fare un'esperienza all'estero. E cosí, ho preparato la valigia per volare in UK, e cominciare una nuova avventura in Creative Assembly dove poter contribuire con la mia esperienza nel back-end alla piattaforma online su cui si basano diversi loro videogiochi, e al tempo stesso affrontare nuove sfide imparando linguaggi e tencologie completamente nuove.<br />
+                E vi diró, avere il proprio nome nei crediti di un videogioco, é un'emozione incredibile (date un occhiata a <a href="https://www.linkedin.com/feed/update/urn:li:activity:7120414493544730625/" target="_blank">Total War: PHARAOH</a> 😉).
                 <br /><br />
                 L'informatica però non è la mia unica passione!<br />
                 Se non sono davanti al PC infatti mi potrete trovare in una cucina, a cucinare qualcosa di prelibato.<br />
-                Altrimenti, se fa troppo caldo per stare ai fornelli, nulla mi toglie dalla mia Xbox Series X (che ovviamente non è l'unica console in casa). E non mi chiedete a cosa gioco! Perchè faccio prima a dirvi a cosa *non* gioco, ma se proprio dovessi scegliere, nulla batte Assassin's Creed.
-                </p>
+                Altrimenti, se fa troppo caldo per stare ai fornelli, nulla mi toglie dalla mia Xbox Series X (che ovviamente non è l'unica console in casa). E non mi chiedete a cosa gioco! Perchè faccio prima a dirvi a cosa *non* gioco, ma se proprio dovessi scegliere, nulla batte una bella sessione di sim-racing.
+            </p>
         </div>
     </div>
     <hr />
