--- a/FRifugioBlog/Pages/About.razor
+++ b/FRifugioBlog/Pages/About.razor
@@ -1,5 +1,7 @@
 ﻿@page "/about"
 
+<SeoHeader Title="About" Description="Francesco Rifugio: storia, passioni e contatti" Keywords="blog, about, certifications, social, post, public, speaking, tech, technology, games, videogames" />
+
 <style>
     h1, h2 {
         font-family: 'Russo One', cursive
