--- a/FRifugioBlog/Pages/Index.razor
+++ b/FRifugioBlog/Pages/Index.razor
@@ -2,6 +2,8 @@
 @using Services
 @inject IPostService PostService
 
+<SeoHeader Description="Blog personale di Francesco Rifugio, in cui condividere articoli tecnici, demo e novitá sulle tecnologie Microsoft, cosí come post su public speaking o videogames." Keywords="blog, news, post, public, speaking, tech, technology, games, videogames" />
+
 <style>
     .card {
         border-radius: 4px;
