--- a/FRifugioBlog/Pages/PostView.razor
+++ b/FRifugioBlog/Pages/PostView.razor
@@ -3,6 +3,8 @@
 @using Services
 @inject IPostService PostService
 
+<SeoHeader Filename="@Filename" />
+
 <style>
     #post-content {
         background-color: white;
